# onnx-cxx-test

./: CMakeLists.txt  OnnxModel.hpp  README.md  main.cpp
cmake/: compiler_warnings.cmake
model/: dummy_network.onnx  dummy_network.py
